// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Resources": Object {
    "CodecommitDependencyCheckCheckProject502DB37A": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "CodecommitDependencyCheckCheckProjectRole22A38DA2",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"wget -O public-key.asc https://bintray.com/user/downloadSubjectPublicKey?username=jeremy-long\\",
        \\"gpg --keyid-format long --list-options show-keyring public-key.asc\\",
        \\"gpg --import public-key.asc\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip.asc\\",
        \\"gpg --verify dependency-check-5.3.0-release.zip.asc dependency-check-5.3.0-release.zip\\",
        \\"unzip dependency-check-5.3.0-release.zip -d /opt\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\",
        \\"mkdir reports\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"echo \\\\\\"No preCheckCommand!\\\\\\"\\",
        \\"SHA=$(git rev-parse HEAD)\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"echo \\\\\\"[===== SHA: $SHA =====]\\\\\\"\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1/\\\\\\" --failOnCVSS 0 --junitFailOnCVSS 0 --prettyPrint --format \\\\\\"ALL\\\\\\" --out reports\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "CodecommitDependencyCheckCheckProjectEventsRole55008F08": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodecommitDependencyCheckCheckProjectEventsRoleDefaultPolicy9F7F50F2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CodecommitDependencyCheckCheckProject502DB37A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodecommitDependencyCheckCheckProjectEventsRoleDefaultPolicy9F7F50F2",
        "Roles": Array [
          Object {
            "Ref": "CodecommitDependencyCheckCheckProjectEventsRole55008F08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodecommitDependencyCheckCheckProjectRole22A38DA2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodecommitDependencyCheckCheckProjectRoleDefaultPolicyD7ADBCD8": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodecommitDependencyCheckCheckProjectRoleDefaultPolicyD7ADBCD8",
        "Roles": Array [
          Object {
            "Ref": "CodecommitDependencyCheckCheckProjectRole22A38DA2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodecommitDependencyCheckScheduleRuleC61A12F1": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "CodecommitDependencyCheckCheckProject502DB37A",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "CodecommitDependencyCheckCheckProjectEventsRole55008F08",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`events 1`] = `
Object {
  "Resources": Object {
    "CheckTopic79759998": Object {
      "Type": "AWS::SNS::Topic",
    },
    "CheckTopicPolicyF0CF133A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "CheckTopic79759998",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "CheckTopic79759998",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "CodecommitDependencyCheckCheckProject502DB37A": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "CodecommitDependencyCheckCheckProjectRole22A38DA2",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"wget -O public-key.asc https://bintray.com/user/downloadSubjectPublicKey?username=jeremy-long\\",
        \\"gpg --keyid-format long --list-options show-keyring public-key.asc\\",
        \\"gpg --import public-key.asc\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip.asc\\",
        \\"gpg --verify dependency-check-5.3.0-release.zip.asc dependency-check-5.3.0-release.zip\\",
        \\"unzip dependency-check-5.3.0-release.zip -d /opt\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\",
        \\"mkdir reports\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"echo \\\\\\"No preCheckCommand!\\\\\\"\\",
        \\"SHA=$(git rev-parse HEAD)\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"echo \\\\\\"[===== SHA: $SHA =====]\\\\\\"\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1/\\\\\\" --failOnCVSS 0 --junitFailOnCVSS 0 --prettyPrint --format \\\\\\"ALL\\\\\\" --out reports\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "CodecommitDependencyCheckCheckProjectEventsRole55008F08": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodecommitDependencyCheckCheckProjectEventsRoleDefaultPolicy9F7F50F2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CodecommitDependencyCheckCheckProject502DB37A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodecommitDependencyCheckCheckProjectEventsRoleDefaultPolicy9F7F50F2",
        "Roles": Array [
          Object {
            "Ref": "CodecommitDependencyCheckCheckProjectEventsRole55008F08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodecommitDependencyCheckCheckProjectRole22A38DA2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodecommitDependencyCheckCheckProjectRoleDefaultPolicyD7ADBCD8": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodecommitDependencyCheckCheckProjectRoleDefaultPolicyD7ADBCD8",
        "Roles": Array [
          Object {
            "Ref": "CodecommitDependencyCheckCheckProjectRole22A38DA2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodecommitDependencyCheckCheckProjectfailed458EEA09": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "FAILED",
            ],
            "project-name": Array [
              Object {
                "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CodecommitDependencyCheckCheckProjectstartedD82B54EC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "IN_PROGRESS",
            ],
            "project-name": Array [
              Object {
                "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CodecommitDependencyCheckCheckProjectsucceeded8CD84271": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "SUCCEEDED",
            ],
            "project-name": Array [
              Object {
                "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CodecommitDependencyCheckScheduleRuleC61A12F1": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "CodecommitDependencyCheckCheckProject502DB37A",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "CodecommitDependencyCheckCheckProjectEventsRole55008F08",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`preCheckCommand 1`] = `
Object {
  "Resources": Object {
    "CodecommitDependencyCheckCheckProject502DB37A": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "CodecommitDependencyCheckCheckProjectRole22A38DA2",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"wget -O public-key.asc https://bintray.com/user/downloadSubjectPublicKey?username=jeremy-long\\",
        \\"gpg --keyid-format long --list-options show-keyring public-key.asc\\",
        \\"gpg --import public-key.asc\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip.asc\\",
        \\"gpg --verify dependency-check-5.3.0-release.zip.asc dependency-check-5.3.0-release.zip\\",
        \\"unzip dependency-check-5.3.0-release.zip -d /opt\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\",
        \\"mkdir reports\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"npm i\\",
        \\"SHA=$(git rev-parse HEAD)\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"echo \\\\\\"[===== SHA: $SHA =====]\\\\\\"\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1/\\\\\\" --failOnCVSS 0 --junitFailOnCVSS 0 --prettyPrint --format \\\\\\"ALL\\\\\\" --out reports\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "CodecommitDependencyCheckCheckProjectEventsRole55008F08": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodecommitDependencyCheckCheckProjectEventsRoleDefaultPolicy9F7F50F2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CodecommitDependencyCheckCheckProject502DB37A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodecommitDependencyCheckCheckProjectEventsRoleDefaultPolicy9F7F50F2",
        "Roles": Array [
          Object {
            "Ref": "CodecommitDependencyCheckCheckProjectEventsRole55008F08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodecommitDependencyCheckCheckProjectRole22A38DA2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodecommitDependencyCheckCheckProjectRoleDefaultPolicyD7ADBCD8": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodecommitDependencyCheckCheckProject502DB37A",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodecommitDependencyCheckCheckProjectRoleDefaultPolicyD7ADBCD8",
        "Roles": Array [
          Object {
            "Ref": "CodecommitDependencyCheckCheckProjectRole22A38DA2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodecommitDependencyCheckScheduleRuleC61A12F1": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "CodecommitDependencyCheckCheckProject502DB37A",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "CodecommitDependencyCheckCheckProjectEventsRole55008F08",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;
